Fixed role binding

--- a/devops-303/devops-303-RoleBindingClient.yml
+++ b/devops-303/devops-303-RoleBindingClient.yml
@@ -7,9 +7,8 @@ metadata:
   namespace: devops-303
 subjects:
   # You can specify more than one "subject"
-  - kind: User
+  - kind: ServiceAccount
     name: client # "name" is case sensitive
-    apiGroup: rbac.authorization.k8s.io
 roleRef:
   # "roleRef" specifies the binding to a Role / ClusterRole
   kind: Role #this must be Role or ClusterRole
